-bug#0001633: PA: new hook in graph.php 
-bug#0001746: SNMP Hex-String matching 
-bug#0001772: Script Server is not honouring reindex method "Index Count Changed" and "Verify All Fields"
-bug#0001965: database upgrade script fails when changing user specific font settings 
-bug#0001989: IE9 breaks Cacti when objects are hidden using 'display:none;' style tag
-bug#0001993: "Undefined index: height in /var/www/html/cacti/lib/html.php on line 147" in PHP error log 
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
-bug: Remove call pass by reference from function declarations
-bug: When creating new graphs without a data source, print error to user instead of throwing php error
-bug: Browser query string does not contain arguments
-bug: inject_form_variables does not operate if more than 1 variable needs replacing
-bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
-bug: verify DS MAX value on data source create (courtesy Fireball)
-bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
-bug: Turn off process leveling if there are not enough poller items to substantiate it
-bug: allow empty [upper|lower]_limit even without autoscaling
-bug: Availability method Ping or SNMP generates meaningless warnings
-bug: Warning in lib/snmp.php by misspelled variable
-bug: fix SQL error on api_reapply_suggested_graph_title for non-data-query graphs
-bug: correct grep'ing of icmp[s|r]eq required for newer linux versions (e.g. Fedora 14)
-documentation: Remove sgml documentation.  See http://docs.cacti.net for Documentation
-documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources